# language_for_cloud_infrastructure

./: .gitignore
python-demo/: pyproject.toml
python-demo/python_demo/: downloader.py
python-demo/tests/: test_python_demo.py
