[tool.poetry]
name = "python-demo"
version = "0.1.0"
description = ""
authors = ["Yaroslav Muravskyi <y@myarik.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
click = "^7.1.2"
uvloop = "^0.14.0"
attr = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
